fixed next & previous card layout issues

--- a/style.css
+++ b/style.css
@@ -306,7 +306,7 @@ nav ul li a{
 
 /* SLIDER LAYOUT */
 .slider{
-  height: 100vh;
+  height: 100%;
   background-color: rgb(34, 34, 34);
   display: flex;
   width: 100%;
@@ -323,6 +323,7 @@ nav ul li a{
   background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(images/greek-statue1.jpg) no-repeat left center;
   background-size: cover;
   cursor: pointer;
+  margin-top: -60px;
 }
 
 .disabled-card-previous .text-wrapper{
@@ -383,6 +384,7 @@ nav ul li a{
   background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(images/museum-art.jpg) no-repeat right center;
   background-size: cover;
   cursor: pointer;
+  margin-top: -60px;
 }
 
 .disabled-card-next .text-wrapper{
@@ -664,27 +666,24 @@ nav ul li a{
   
 }
 
+
 .pagination-slider{
+  height: 100px;
   margin-left: auto;
-  width: 120px;
+  margin-right: 40px;
+  width: 100px;
 }
 
 .pagination-slider p{
-  font-size: 2em;
+  display: flex;
+  font-size: 1.5em;
   position: absolute;
-  background-color: red;
-  margin-top: 20px;
+  margin-top: 35px;
   text-align: end;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-
-.pagination-slider p::before{
-  content: "";
-  width: 50px;
-  height: 2px;
-  background-color: white;
-  position: absolute;
-  margin-left: -100px;
-  top: 50%;
-
+.pagination-slider .page{
+  font-size: 1.75em;
+  margin-top: -5px;
 }
